--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bluebird": "^3.0.5",
     "canvas": "^1.3.2",
     "gdal": "^0.7.2",
+    "mapnik": "^3.4.11",
     "request": "^2.67.0",
     "tempfile": "^1.1.1"
   },
